Updated: Seguimos avanzando en nosotros: NOTEBOOK

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -6,34 +6,40 @@
 
   <div class="nosotros__card">
     <div>
-      <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]="{ width: '360px' }">
+      <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia"
+        [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
           <i class="pi pi-thumbs-up"></i>
         </ng-template>
         <p>
-          En Basamento SRL, valoramos la transparencia y la confianza en cada interacción comercial. A continuación, te presentamos las razones por las cuales somos la elección ideal como tu socio confiable.
+          En Basamento SRL, valoramos la transparencia y la confianza en cada interacción comercial. A continuación,
+          descubre las razones por las cuales somos la elección ideal como tu socio confiable.
         </p>
       </p-card>
     </div>
 
     <div>
-      <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería" [style]="{ width: '360px' }">
+      <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería"
+        [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
           <i class="pi pi-users"></i>
         </ng-template>
         <p>
-          Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia experiencia y dedicación para asegurar la excelencia en todos los proyectos que emprendemos.
+          Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia
+          experiencia y dedicación para asegurar la excelencia en todos los proyectos que emprendemos.
         </p>
       </p-card>
     </div>
 
     <div>
-      <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción" [style]="{ width: '360px' }">
+      <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción"
+        [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
           <i class="pi pi-verified"></i>
         </ng-template>
         <p>
-          Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos obtenido resultados excepcionales para nuestros clientes.
+          Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos
+          obtenido resultados excepcionales para nuestros clientes.
         </p>
       </p-card>
     </div>
@@ -48,7 +54,8 @@
           <i class="pi pi-sun"></i>
         </ng-template>
         <p>
-          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y fomenten la sostenibilidad y resistencia en la industria de la construcción.
+          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y
+          fomenten la sostenibilidad y resistencia en la industria de la construcción.
         </p>
       </p-card>
     </div>
@@ -59,52 +66,89 @@
           <i class="pi pi-globe"></i>
         </ng-template>
         <p>
-          Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura, procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros análisis.
+          Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura,
+          procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros
+          análisis.
         </p>
       </p-card>
     </div>
 
   </div>
 
-
-
+  <h2> ¿Quiénes somos?? </h2>
+  <hr>
+  <div class="nosotros__info">
+    <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong> ingeniería </strong>
+      y la <strong> construcción </strong>, tanto para obras privadas como industriales. Nuestro compromiso es ofrecer <strong> servicios de
+      vanguardia </strong> que permitan a nuestros clientes tomar decisiones fundamentadas en la ejecución de sus proyectos de
+      infraestructura, asegurando su seguridad y minimizando el impacto ambiental.
+      Con un equipo de <strong> profesionales altamente capacitados </strong> y una larga trayectoria en el sector, nos destacamos por
+      nuestra capacidad de adaptación a las distintas problemáticas del mercado, gracias a un enfoque innovador y
+      orientado a la excelencia. <br> <br>
+      <strong class="strong">
+        Nuestra experiencia nos respalda como líderes en el mercado, ofreciendo soluciones a lo largo de toda la vida útil
+        de las infraestructuras, abarcando todos tipos sectores. Nos comprometemos a acompañar a nuestros clientes en la
+        eficiente gestión de sus activos de infraestructura, con un enfoque en la sustentabilidad y la calidad.
+      </strong>
+    </p>
+    <img src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
+  </div>
 
   <div class="nosotros__content container">
     <!-- <app-preguntas-frecuentes /> -->
     <h2>Preguntas Frecuentes</h2>
     <hr>
 
-<div>
+    <div>
 
-  <p-accordion [activeIndex]="0">
-      <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
+      <p-accordion [activeIndex]="0">
+        <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
           <p>
-            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta calidad y soluciones innovadoras para proyectos de ingeniería civil.
+            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
+            calidad y soluciones innovadoras para proyectos de ingeniería civil.
           </p>
-      </p-accordionTab>
-      <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
+        </p-accordionTab>
+        <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
           <p>
-            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
+            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño
+            arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
           </p>
-      </p-accordionTab>
-      <p-accordionTab header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
+        </p-accordionTab>
+        <p-accordionTab
+          header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
           <p>
-            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos por utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos por
+            utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
           </p>
-      </p-accordionTab>
-      <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+        </p-accordionTab>
+        <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
           <p>
-            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales. Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas, así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los proyectos que emprendemos.
+            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de
+            viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales.
+            Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas,
+            así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En
+            Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los
+            proyectos que emprendemos.
           </p>
-      </p-accordionTab>
-      <p-accordionTab header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
+        </p-accordionTab>
+        <p-accordionTab
+          header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
           <p>
-            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por correo electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que necesites sobre nuestros servicios.
+            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por correo
+            electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que
+            necesites sobre nuestros servicios.
           </p>
-      </p-accordionTab>
-  </p-accordion>
+        </p-accordionTab>
+      </p-accordion>
 
-</div>
+    </div>
+  </div>
+
+  <div class="nosotros nosotros__contact container">
+    <h2> Contáctanos Ahora </h2>
+    <hr>
+    <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de los riesgos asociados</p>
+    <button routerLink="/contacto">Contacto</button>
   </div>
 
   <p-scrollTop />
