Updated: Casi terminamos el apartado de nosotros: PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,4 +1,7 @@
 <div class="nosotros">
+
+  <div class="container">
+
   <H1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </H1>
 
   <h2> ¿Por qué Elegirnos? </h2>
@@ -44,18 +47,13 @@
       </p-card>
     </div>
 
-  </div>
-
-  <div class="nosotros__card">
-
     <div>
-      <p-card header="Enfoque Ecológico" subheader="Compromiso con el Medio Ambiente" [style]="{ width: '360px' }">
+      <p-card header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]="{ width: '360px' }">
         <ng-template pTemplate="header">
           <i class="pi pi-sun"></i>
         </ng-template>
         <p>
-          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y
-          fomenten la sostenibilidad y resistencia en la industria de la construcción.
+          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y fomenten la sostenibilidad y resistencia en la industria de la construcción.
         </p>
       </p-card>
     </div>
@@ -94,7 +92,7 @@
     <img src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
   </div>
 
-  <div class="nosotros__content container">
+  <div class="nosotros__content">
     <!-- <app-preguntas-frecuentes /> -->
     <h2>Preguntas Frecuentes</h2>
     <hr>
@@ -144,7 +142,7 @@
     </div>
   </div>
 
-  <div class="nosotros nosotros__contact container">
+  <div class="nosotros nosotros__contact">
     <h2> Contáctanos Ahora </h2>
     <hr>
     <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de los riesgos asociados</p>
@@ -152,5 +150,7 @@
   </div>
 
   <p-scrollTop />
+
+</div>
 
 </div>
