--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -1,7 +1,4 @@
-.container {
-  max-width: 50%; /* Ancho máximo del contenedor */
-  margin: 0 auto; /* Centra el contenedor horizontalmente */
-}
+
 
 .nosotros {
   background-color: var(--color-background-light);
@@ -23,7 +20,8 @@
   }
   &__card {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin-bottom: 10rem;
   }
   &__info {
@@ -32,7 +30,6 @@
     justify-content: center;
     margin-bottom: 10rem;
     p{
-      width: 35%;
       text-align: left;
       margin-right: 5rem;
       line-height: 1.65rem;
