--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -4,7 +4,8 @@ $color-background: #EFF5F5;
 .servicios {
   &__content {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    flex-wrap: wrap;
     padding-top: 5rem;
     padding-bottom: 5rem;
     margin-bottom: 5rem;
