--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,156 +1,177 @@
-<div class="nosotros">
+<h1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </h1>
+
+<div class="nosotros main-padding-superior main-padding-inferior">
 
   <div class="container">
 
-  <H1 class="main-margen-superior  animate__animated animate__fadeIn"> NOSOTROS </H1>
-
-  <h2> ¿Por qué Elegirnos? </h2>
-  <hr>
-
-  <div class="nosotros__card">
-    <div>
-      <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia"
-        [style]="{ width: '360px' }">
-        <ng-template pTemplate="header">
-          <i class="pi pi-thumbs-up"></i>
-        </ng-template>
-        <p>
-          En Basamento SRL, valoramos la transparencia y la confianza en cada interacción comercial. A continuación,
-          descubre las razones por las cuales somos la elección ideal como tu socio confiable.
-        </p>
-      </p-card>
-    </div>
-
-    <div>
-      <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería"
-        [style]="{ width: '360px' }">
-        <ng-template pTemplate="header">
-          <i class="pi pi-users"></i>
-        </ng-template>
-        <p>
-          Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia
-          experiencia y dedicación para asegurar la excelencia en todos los proyectos que emprendemos.
-        </p>
-      </p-card>
-    </div>
-
-    <div>
-      <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción"
-        [style]="{ width: '360px' }">
-        <ng-template pTemplate="header">
-          <i class="pi pi-verified"></i>
-        </ng-template>
-        <p>
-          Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos
-          obtenido resultados excepcionales para nuestros clientes.
-        </p>
-      </p-card>
-    </div>
-
-    <div>
-      <p-card header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]="{ width: '360px' }">
-        <ng-template pTemplate="header">
-          <i class="pi pi-sun"></i>
-        </ng-template>
-        <p>
-          Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y fomenten la sostenibilidad y resistencia en la industria de la construcción.
-        </p>
-      </p-card>
-    </div>
-
-    <div>
-      <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
-        <ng-template pTemplate="header">
-          <i class="pi pi-globe"></i>
-        </ng-template>
-        <p>
-          Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura,
-          procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros
-          análisis.
-        </p>
-      </p-card>
-    </div>
-
-  </div>
-
-  <h2> ¿Quiénes somos?? </h2>
-  <hr>
-  <div class="nosotros__info">
-    <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong> ingeniería </strong>
-      y la <strong> construcción </strong>, tanto para obras privadas como industriales. Nuestro compromiso es ofrecer <strong> servicios de
-      vanguardia </strong> que permitan a nuestros clientes tomar decisiones fundamentadas en la ejecución de sus proyectos de
-      infraestructura, asegurando su seguridad y minimizando el impacto ambiental.
-      Con un equipo de <strong> profesionales altamente capacitados </strong> y una larga trayectoria en el sector, nos destacamos por
-      nuestra capacidad de adaptación a las distintas problemáticas del mercado, gracias a un enfoque innovador y
-      orientado a la excelencia. <br> <br>
-      <strong class="strong">
-        Nuestra experiencia nos respalda como líderes en el mercado, ofreciendo soluciones a lo largo de toda la vida útil
-        de las infraestructuras, abarcando todos tipos sectores. Nos comprometemos a acompañar a nuestros clientes en la
-        eficiente gestión de sus activos de infraestructura, con un enfoque en la sustentabilidad y la calidad.
-      </strong>
-    </p>
-    <img src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
-  </div>
-
-  <div class="nosotros__content">
-    <!-- <app-preguntas-frecuentes /> -->
-    <h2>Preguntas Frecuentes</h2>
+    <h2> ¿Por qué Elegirnos? </h2>
     <hr>
 
-    <div>
+    <div class="nosotros__card">
+      <div>
+        <p-card header="Transparencia y Confianza: Nuestra Prioridad" subheader="Comprometidos con la Excelencia"
+          [style]="{ width: '360px' }">
+          <ng-template pTemplate="header">
+            <span class="material-symbols-outlined">
+              real_estate_agent
+              </span>
+          </ng-template>
+          <p>
+            En Basamento SRL, valoramos la transparencia y la confianza en cada interacción comercial. A continuación,
+            descubre las razones por las cuales somos la elección ideal como tu socio confiable.
+          </p>
+        </p-card>
+      </div>
 
-      <p-accordion [activeIndex]="0">
-        <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
+      <div>
+        <p-card header="Especialistas Expertos en la Materia" subheader="Maestría en Ingeniería"
+          [style]="{ width: '360px' }">
+          <ng-template pTemplate="header">
+            <span class="material-symbols-outlined">
+              engineering
+              </span>
+          </ng-template>
           <p>
-            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
-            calidad y soluciones innovadoras para proyectos de ingeniería civil.
+            Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia
+            experiencia y dedicación para asegurar la excelencia en todos los proyectos que emprendemos.
           </p>
-        </p-accordionTab>
-        <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
+        </p-card>
+      </div>
+
+      <div>
+        <p-card header="Historial de Éxito Demostrado" subheader="Logros Comprobados en Acción"
+          [style]="{ width: '360px' }">
+          <ng-template pTemplate="header">
+            <span class="material-symbols-outlined">
+              workspace_premium
+              </span>
+          </ng-template>
           <p>
-            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño
-            arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
+            Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos
+            obtenido resultados excepcionales para nuestros clientes.
           </p>
-        </p-accordionTab>
-        <p-accordionTab
-          header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
+        </p-card>
+      </div>
+
+      <div>
+        <p-card header="Enfoque Ecológico y Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente"
+          [style]="{ width: '360px' }">
+          <ng-template pTemplate="header">
+            <span class="material-symbols-outlined">
+              heat_pump_balance
+              </span>
+          </ng-template>
           <p>
-            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos por
-            utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+            Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y
+            fomenten la sostenibilidad y resistencia en la industria de la construcción.
           </p>
-        </p-accordionTab>
-        <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+        </p-card>
+      </div>
+
+      <div>
+        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
+          <ng-template pTemplate="header">
+            <span class="material-symbols-outlined">
+              captive_portal
+              </span>
+          </ng-template>
           <p>
-            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de
-            viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales.
-            Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas,
-            así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En
-            Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los
-            proyectos que emprendemos.
+            Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura,
+            procesamiento e interpretación de datos, asegurando resultados precisos y confiables en todos nuestros
+            análisis.
           </p>
-        </p-accordionTab>
-        <p-accordionTab
-          header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
-          <p>
-            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por correo
-            electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que
-            necesites sobre nuestros servicios.
-          </p>
-        </p-accordionTab>
-      </p-accordion>
+        </p-card>
+      </div>
 
     </div>
-  </div>
 
-  <div class="nosotros nosotros__contact">
-    <h2> Contáctanos Ahora </h2>
+    <h2> ¿Quiénes somos?? </h2>
     <hr>
-    <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de los riesgos asociados</p>
-    <button routerLink="/contacto">Contacto</button>
+    <div class="nosotros__info">
+      <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
+          ingeniería </strong>
+        y la <strong> construcción </strong>, tanto para obras privadas como industriales. Nuestro compromiso es ofrecer
+        <strong> servicios de
+          vanguardia </strong> que permitan a nuestros clientes tomar decisiones fundamentadas en la ejecución de sus
+        proyectos de
+        infraestructura, asegurando su seguridad y minimizando el impacto ambiental.
+        Con un equipo de <strong> profesionales altamente capacitados </strong> y una larga trayectoria en el sector,
+        nos destacamos por
+        nuestra capacidad de adaptación a las distintas problemáticas del mercado, gracias a un enfoque innovador y
+        orientado a la excelencia. <br> <br>
+        <strong class="strong">
+          Nuestra experiencia nos respalda como líderes en el mercado, ofreciendo soluciones a lo largo de toda la vida
+          útil
+          de las infraestructuras, abarcando todos tipos sectores. Nos comprometemos a acompañar a nuestros clientes en
+          la
+          eficiente gestión de sus activos de infraestructura, con un enfoque en la sustentabilidad y la calidad.
+        </strong>
+      </p>
+      <img src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt="">
+    </div>
+
+    <div class="nosotros__content">
+      <!-- <app-preguntas-frecuentes /> -->
+      <h2>Preguntas Frecuentes</h2>
+      <hr>
+
+      <div>
+
+        <p-accordion [activeIndex]="0">
+          <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
+            <p>
+              Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
+              calidad y soluciones innovadoras para proyectos de ingeniería civil.
+            </p>
+          </p-accordionTab>
+          <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
+            <p>
+              Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño
+              arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
+            </p>
+          </p-accordionTab>
+          <p-accordionTab
+            header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
+            <p>
+              Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos
+              por
+              utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+            </p>
+          </p-accordionTab>
+          <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+            <p>
+              Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de
+              viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales.
+              Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas,
+              así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En
+              Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los
+              proyectos que emprendemos.
+            </p>
+          </p-accordionTab>
+          <p-accordionTab
+            header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
+            <p>
+              Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por
+              correo
+              electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que
+              necesites sobre nuestros servicios.
+            </p>
+          </p-accordionTab>
+        </p-accordion>
+
+      </div>
+    </div>
+
+    <div class="nosotros nosotros__contact">
+      <h2> Contáctanos Ahora </h2>
+      <hr>
+      <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
+        los riesgos asociados</p>
+      <button routerLink="/contacto">Contacto</button>
+    </div>
+
+    <p-scrollTop />
+
   </div>
-
-  <p-scrollTop />
-
-</div>
 
 </div>
