--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -5,13 +5,13 @@
   h2 {
     margin-bottom: 1rem;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   hr {
     width: 12rem;
     margin-bottom: 5rem;
   }
-  i {
+  span {
     display: flex;
     justify-content: center;
     padding: 2rem;
@@ -20,7 +20,7 @@
   }
   &__card {
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
     flex-wrap: wrap;
     margin-bottom: 10rem;
   }
@@ -35,7 +35,7 @@
       line-height: 1.65rem;
       font-size: 1.0625rem;
       .strong{
-        font-size: 1.4rem;
+        font-size: 1.25rem;
       }
     }
     img {
@@ -62,9 +62,7 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
-      // border-radius: 8px;
       transition-duration: 0.2s;
-      margin-bottom: 3rem;
 
     }
 
