--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -17,34 +17,36 @@
 
     <h2>Formulario de Contacto</h2>
 
-  <div class="radio_options">
+    <div class="radio_options">
       <div>
-          <p-radioButton name="pizza" value="Cheese" [(ngModel)]="ingredient" inputId="ingredient1"></p-radioButton>
-          <label for="ingredient1">Servicios de ingeniería</label>
+          <p-radioButton name="asunto" [value]="'Servicios de ingeniería'" [(ngModel)]="asunto" (ngModelChange)="updateAsunto('Servicios de ingeniería')" inputId="asunto1"></p-radioButton>
+          <label for="asunto1">Servicios de ingeniería</label>
       </div>
 
       <div>
-          <p-radioButton name="pizza" value="Mushroom" [(ngModel)]="ingredient" inputId="ingredient2"></p-radioButton>
-          <label for="ingredient2">Presupuesto</label>
+          <p-radioButton name="asunto" [value]="'Presupuesto'" [(ngModel)]="asunto" (ngModelChange)="updateAsunto('Presupuesto')" inputId="asunto2"></p-radioButton>
+          <label for="asunto2">Presupuesto</label>
       </div>
 
       <div>
-          <p-radioButton name="pizza" value="Pepper" [(ngModel)]="ingredient" inputId="ingredient3"></p-radioButton>
-          <label for="ingredient3">Proyectos en curso</label>
+          <p-radioButton name="asunto" [value]="'Proyectos en curso'" [(ngModel)]="asunto" (ngModelChange)="updateAsunto('Proyectos en curso')" inputId="asunto3"></p-radioButton>
+          <label for="asunto3">Proyectos en curso</label>
       </div>
 
       <div>
-          <p-radioButton name="pizza" value="Onion" [(ngModel)]="ingredient" inputId="ingredient4"></p-radioButton>
-          <label for="ingredient4">Otros</label>
+          <p-radioButton name="asunto" [value]="'Otros'" [(ngModel)]="asunto" (ngModelChange)="updateAsunto('Otros')" inputId="asunto4"></p-radioButton>
+          <label for="asunto4">Otros</label>
       </div>
   </div>
+
 
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
       <input type="text" pInputText formControlName="nombre" placeholder="Nombre" />
       <input type="text" pInputText formControlName="apellido" placeholder="Apellido" />
       <input type="email" pInputText formControlName="email" placeholder="E-Mail" />
       <input type="tel" pInputText formControlName="telefono" placeholder="Telefono" />
-      <textarea rows="5" cols="30" pInputTextarea formControlName="mensaje" [(ngModel)]="value" placeholder="Mensaje"></textarea>
+      <input *ngIf="asunto === 'Otros'" type="text" pInputText formControlName="otros" placeholder="Especificar otro asunto" />
+      <textarea rows="5" cols="30" pInputTextarea formControlName="mensaje"  placeholder="Mensaje"></textarea>
       <button type="submit" pButton label="Enviar"></button>
     </form>
 
