--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -32,7 +32,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: start;
+      justify-content: flex-start;
       margin-bottom: 1.7rem;
       div {
         padding-right: 1rem;
