--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -53,6 +53,11 @@
     flex-direction: column;
     align-items: flex-start; // Alinea los elementos del formulario a la izquierda
     width: 100%; // Ajusta el ancho del formulario
+    div {
+      margin-bottom: 1rem;
+      margin-top: -0.6rem;
+      color: red;
+    }
   }
 
   input,
